--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,146 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-diffusers
-wandb
-ml_collections
+absl-py==2.0.0
+antlr4-python3-runtime==4.8
+appdirs==1.4.4
+asciitree==0.3.3
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1694046349000/work
+azureml==0.2.7
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1687772187254/work
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+cloudpickle==2.2.1
+cmake==3.27.5
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
+contextlib2==21.6.0
+contourpy==1.1.1
+cycler==0.11.0
+debugpy @ file:///croot/debugpy_1690905042057/work
+decorator==4.4.2
+diffusers==0.21.2
+docker-pycreds==0.4.0
+dt-apriltags==3.1.7
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
+evdev==1.6.1
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
+fasteners==0.19
+filelock==3.12.4
+flatten-dict==0.4.2
+fonttools==4.42.1
+fsspec==2023.9.1
+-e git+ssh://git@github.com/ankile/furniture-bench.git@6f0313c6efbc30d9a9f4b876630f2ee25f287b5c#egg=furniture_bench
+gdown==4.4.0
+gitdb==4.0.10
+GitPython==3.1.37
+gym==0.21.0
+huggingface-hub==0.17.2
+hydra-core==1.1.1
+idna==3.4
+imageio==2.31.3
+imageio-ffmpeg==0.4.9
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+install==1.3.5
+ipdb==0.13.13
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1693880262622/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1680185408135/work
+# Editable install with no version control (isaacgym==1.0rc4)
+-e /home/azureuser/isaacgym/python
+jedi==0.19.0
+Jinja2==3.1.2
+joblib==1.3.2
+jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1654730843242/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1696972407098/work
+kiwisolver==1.4.5
+lit==16.0.6
+llvmlite==0.41.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
+mdurl==0.1.2
+ml-collections==0.1.1
+moviepy==1.0.3
+mpmath==1.3.0
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
+networkx==3.1
+ninja==1.11.1
+numba==0.58.0
+numcodecs==0.11.0
+numpy==1.24.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+omegaconf==2.1.1
+opencv-python==4.8.0.76
+packaging==23.1
+pandas==2.0.3
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
+pathtools==0.1.2
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1667297516076/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+Pillow==9.0.1
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1696272223550/work
+proglog==0.1.10
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1688565951714/work
+protobuf==4.24.3
+psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1691408637400/work
+pynput==1.7.6
+pyparsing==3.1.1
+pyrealsense2==2.54.1.5217
+PySocks==1.7.1
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+python-dotenv==1.0.0
+python-xlib==0.33
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq @ file:///croot/pyzmq_1686601365461/work
+-e git+ssh://git@github.com/ankile/furniture-bench.git@6f0313c6efbc30d9a9f4b876630f2ee25f287b5c#egg=r3m&subdirectory=r3m
+regex==2023.8.8
+requests==2.31.0
+rich==13.5.3
+safetensors==0.3.3
+scikit-learn==1.3.1
+scikit-video==1.1.11
+scipy==1.10.1
+sentry-sdk==1.31.0
+setproctitle==1.3.2
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+smmap==5.0.1
+soupsieve==2.5
+-e git+ssh://git@github.com/ankile/furniture-diffusion.git@c4f2120e89d2f900c45cfd4c77b721571c82293e#egg=src
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+sympy==1.12
+tabulate==0.9.0
+termcolor==2.3.0
+threadpoolctl==3.2.0
+tokenizers==0.14.1
+tomli==2.0.1
+torch==2.0.1
+torchvision==0.15.2
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1648827257044/work
+tqdm==4.66.1
+traitlets==5.10.0
+transformers==4.34.0
+transforms3d==0.4.1
+triton==2.0.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1695040754690/work
+tzdata==2023.3
+urllib3==2.0.5
+-e git+ssh://git@github.com/ankile/furniture-bench.git@6f0313c6efbc30d9a9f4b876630f2ee25f287b5c#egg=vip&subdirectory=vip
+wandb==0.15.11
+wcwidth==0.2.6
+zarr==2.16.1
+zipp==3.17.0
