--- a/src/config/regularization.yaml
+++ b/src/config/regularization.yaml
@@ -1,3 +1,6 @@
 regularization:
   feature_layernorm: false
+  feature_noise: false
+  feature_dropout: false
   augment_image: false
+  weight_decay: 1e-6
