--- a/src/config/rollout/rollout.yaml
+++ b/src/config/rollout/rollout.yaml
@@ -2,10 +2,11 @@ rollouts: true
 every: 5
 loss_threshold: 0.05
 max_steps: 2000
-count: ${num_envs} * 1
+num_envs: 4
+count: ${rollout.num_envs}
+save_rollouts: false
 save_failures: false
 randomness: low
 furniture: one_leg
 n_parts_assemble: null
-num_envs: 4
 
