Configure the feature training experiment config in Hydra as well

--- a/src/config/experiment/feature_training.yaml
+++ b/src/config/experiment/feature_training.yaml
@@ -6,10 +6,12 @@ observation_type: feature
   
 # Override the values for observation type, layernorm, and augmentation
 data:
-  batch_size: 2048
   data_subset: 50
   augment_image: false
-  dataloader_workers: 64
+  dataloader_workers: 16
+
+training:
+  batch_size: 2048
 
 regularization:
   feature_layernorm: true
