--- a/src/config/experiment/image_training.yaml
+++ b/src/config/experiment/image_training.yaml
@@ -6,10 +6,12 @@ observation_type: image
   
 # Override the values for observation type, layernorm, and augmentation
 data:
-  batch_size: 256
   data_subset: 50
   augment_image: true
   dataloader_workers: 64
+
+training:
+  batch_size: 256
 
 regularization:
   feature_layernorm: false
