More fixes of minor bugs in data pipeline and start multit-task experiment setup

--- a/src/config/base.yaml
+++ b/src/config/base.yaml
@@ -14,7 +14,7 @@ obs_horizon: 2
 observation_type: image
 furniture: one_leg
 environment: sim
-demo_source: scripted
+demo_source: teleop
 randomness: low
 discount: 0.999
 
