Launch experiments with vit and round_table

--- a/src/config/data.yaml
+++ b/src/config/data.yaml
@@ -9,5 +9,5 @@ data:
   environment: ${environment}
   furniture: ${furniture}
   demo_source: ${demo_source}
-  randomness: low
+  randomness: ${randomness}
   normalization: min_max # min_max, mean_std
