First version of the naive success conditioning running

--- a/src/config/data.yaml
+++ b/src/config/data.yaml
@@ -11,3 +11,4 @@ data:
   demo_source: ${demo_source}
   randomness: ${randomness}
   normalization: min_max # min_max, mean_std
+  demo_outcome: ${demo_outcome}
