--- a/src/config/experiment/image_training.yaml
+++ b/src/config/experiment/image_training.yaml
@@ -1,20 +1,26 @@
 # @package _global_
 defaults:
-  - override /vision_encoder: spatial_softmax
+  - override /vision_encoder: resnet
 
-observation_type: image
-  
 # Override the values for observation type, layernorm, and augmentation
+observation_type: image
+
+pred_horizon: 16
+obs_horizon: 2
+randomness: [low, med]
+
 data:
   data_subset: 50
   augment_image: true
-  dataloader_workers: 64
+  dataloader_workers: 15
 
 training:
-  batch_size: 256
+  batch_size: 128
 
 regularization:
   feature_layernorm: false
   feature_noise: false
   feature_dropout: false
 
+control:
+  control_mode: pos
