--- a/sweeps/sweep_collectinfer_round.yaml
+++ b/sweeps/sweep_collectinfer_round.yaml
@@ -1,7 +1,7 @@
-program: src/train/bc.py
+program: src/train/bc_no_rollout.py
 entity: robot-rearrangement
 project: sweeps
-name: traj-collectinfer-roundtable-1
+name: traj-collectinfer-roundtable-2
 method: grid
 parameters:
   demo_source:
@@ -14,11 +14,13 @@ command:
   - ${env}
   - python
   - ${program}
-  - data.dataloader_workers=16
+  - +experiment=image_training
   - control.control_mode=pos
   - training.batch_size=128
   - vision_encoder=resnet
+  - vision_encoder.pretrained=true
   - obs_horizon=1
   - pred_horizon=32
   - furniture=round_table
+  - randomness=low
   - ${args_no_hyphens}
