Make fix to multitask run

--- a/src/config/experiment/image_multitask.yaml
+++ b/src/config/experiment/image_multitask.yaml
@@ -6,7 +6,12 @@ observation_type: image
 
 vision_encoder:
   pretrained: true
-  
+  freeze: false
+
+action_horizon: 8
+pred_horizon: 32
+obs_horizon: 1
+
 data:
   data_subset: null
   augment_image: true
