--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,119 @@
-absl-py==2.0.0
-antlr4-python3-runtime==4.8
+absl-py==2.1.0
+antlr4-python3-runtime==4.9.3
 appdirs==1.4.4
 asciitree==0.3.3
-azureml==0.2.7
-beautifulsoup4==4.12.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
+asttokens==2.4.1
+backcall==0.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
-cloudpickle==2.2.1
-cmake==3.27.5
+cloudpickle==3.0.0
 contextlib2==21.6.0
 contourpy==1.1.1
-cycler==0.11.0
-decorator==4.4.2
-diffusers==0.21.2
+cycler==0.12.1
+decorator==5.1.1
+diffusers==0.26.3
 docker-pycreds==0.4.0
 dt-apriltags==3.1.7
-evdev==1.6.1
+evdev==1.7.0
+executing==2.0.1
 fasteners==0.19
-filelock==3.12.4
-flatten-dict==0.4.2
-fonttools==4.42.1
-fsspec==2023.9.1
-gdown==4.4.0
-gitdb==4.0.10
-GitPython==3.1.37
+filelock==3.13.1
+fonttools==4.49.0
+fsspec==2024.2.0
+# -e git+ssh://git@github.com/ankile/furniture-bench.git@924b8e30266d0d4cdc9aa4b0b78d741b06cf3b50#egg=furniture_bench
+fvcore==0.1.5.post20221221
+gitdb==4.0.11
+GitPython==3.1.42
 gym==0.21.0
-huggingface-hub==0.17.2
-hydra-core==1.1.1
-idna==3.4
+huggingface-hub==0.20.3
+hydra-core==1.3.2
+idna==3.6
 imageio==2.31.3
 imageio-ffmpeg==0.4.9
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-install==1.3.5
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+iopath==0.1.10
 ipdb==0.13.13
-jedi==0.19.0
-Jinja2==3.1.2
+ipython==8.12.3
+# Editable install with no version control (isaacgym==1.0rc4)
+# -e /data/pulkitag/data/anthony/source_install/test/isaacgym/python
+jedi==0.19.1
+Jinja2==3.1.3
 joblib==1.3.2
 kiwisolver==1.4.5
-lit==16.0.6
-llvmlite==0.41.0
+llvmlite==0.41.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-matplotlib==3.7.3
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+matplotlib-inline==0.1.6
 mdurl==0.1.2
-ml-collections==0.1.1
-moviepy==1.0.3
 mpmath==1.3.0
 networkx==3.1
-ninja==1.11.1
-numba==0.58.0
-numcodecs==0.11.0
+ninja==1.11.1.1
+numba==0.58.1
+numcodecs==0.12.1
 numpy==1.24.4
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-omegaconf==2.1.1
-opencv-python==4.8.0.76
-packaging==23.1
-pandas==2.0.3
-pathtools==0.1.2
-Pillow==9.0.1
-proglog==0.1.10
-protobuf==4.24.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+omegaconf==2.3.0
+opencv-python==4.9.0.80
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.2.0
+portalocker==2.8.2
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
 pynput==1.7.6
 pyparsing==3.1.1
-pyrealsense2==2.54.1.5217
-PySocks==1.7.1
-python-dotenv==1.0.0
+pyrealsense2==2.54.2.5684
+python-dateutil==2.8.2
 python-xlib==0.33
-pytz==2023.3.post1
+pytorch3d==0.3.0
 PyYAML==6.0.1
-regex==2023.8.8
+regex==2023.12.25
 requests==2.31.0
-rich==13.5.3
-safetensors==0.3.3
-scikit-learn==1.3.1
-scikit-video==1.1.11
+rich==13.7.0
+safetensors==0.4.2
 scipy==1.10.1
-sentry-sdk==1.31.0
-setproctitle==1.3.2
+sentry-sdk==1.40.5
+setproctitle==1.3.3
+six==1.16.0
 smmap==5.0.1
-soupsieve==2.5
+# -e git+ssh://git@github.com/ankile/furniture-diffusion.git@20f872cd513ffc02b435f5f227b66b05e4e579a4#egg=src
+stack-data==0.6.3
 sympy==1.12
 tabulate==0.9.0
-termcolor==2.3.0
-threadpoolctl==3.2.0
-tokenizers==0.14.1
+termcolor==2.4.0
+timm==0.9.16
+tokenizers==0.15.2
 tomli==2.0.1
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.66.1
-traitlets==5.10.0
-transformers==4.34.0
-transforms3d==0.4.1
-triton==2.0.0
-tzdata==2023.3
-urllib3==2.0.5
-wandb==0.15.11
-wcwidth==0.2.6
+torch==2.2.1
+torchvision==0.17.1
+tqdm==4.66.2
+traitlets==5.14.1
+transformers==4.38.1
+triton==2.2.0
+typing_extensions==4.9.0
+urllib3==2.2.1
+wandb==0.16.3
+wcwidth==0.2.13
+yacs==0.1.8
 zarr==2.16.1
 zipp==3.17.0
