--- a/src/config/actor/mlp.yaml
+++ b/src/config/actor/mlp.yaml
@@ -4,6 +4,9 @@ pred_horizon: ${pred_horizon}
 obs_horizon: ${obs_horizon}
 first_action_index: 0
 
+hidden_dims: [256, 256, 256]
+dropout: 0.1
+
 loss_fn: MSELoss  # MSELoss | L1Loss
 
 projection_dim: 128
