--- a/src/config/experiment/image_mlp.yaml
+++ b/src/config/experiment/image_mlp.yaml
@@ -3,7 +3,6 @@ defaults:
   - override /vision_encoder: resnet
   - override /actor: mlp
 
-# Override the values for observation type, layernorm, and augmentation
 observation_type: image
 
 vision_encoder:
@@ -13,6 +12,12 @@ vision_encoder:
 pred_horizon: 32
 obs_horizon: 1
 randomness: low
+
+furniture: ???
+demo_source: teleop
+
+actor:
+  hidden_dims: [256, 256, 256]
 
 data:
   data_subset: null
@@ -29,3 +34,6 @@ regularization:
 
 control:
   control_mode: pos
+
+wandb:
+  project: mlp-baseline-1
