Make Supercloud run script for trajectory augmentation volume sweep

--- a/src/config/experiment/image_collect_infer.yaml
+++ b/src/config/experiment/image_collect_infer.yaml
@@ -13,7 +13,7 @@ pred_horizon: 32
 obs_horizon: 1
 
 data:
-  data_subset: null
+  data_subset: 50
   augment_image: true
   dataloader_workers: 32
 
