--- a/src/config/experiment/image_curriculum_2.yaml
+++ b/src/config/experiment/image_curriculum_2.yaml
@@ -14,7 +14,7 @@ regularization:
 furniture: ???
 randomness: [low, med]
 demo_source: [teleop, rollout]
-demo_outcome: success
+demo_outcome: [success, partial_success]
 
 wandb:
   project: ${furniture}-curriculum-1
