--- a/src/config/training.yaml
+++ b/src/config/training.yaml
@@ -2,6 +2,7 @@ training:
   gpu_id: 0
   
   actor_lr: 1e-4
+  encoder_lr: ${training.actor_lr}
   clip_grad_norm: false
   clip_sample: true
   mixed_precision: false
