--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
+colorlog==6.8.2
 contextlib2==21.6.0
 contourpy==1.1.1
 cycler==0.12.1
@@ -21,7 +22,6 @@ fasteners==0.19
 filelock==3.13.1
 fonttools==4.49.0
 fsspec==2024.2.0
-# -e git+ssh://git@github.com/ankile/furniture-bench.git@924b8e30266d0d4cdc9aa4b0b78d741b06cf3b50#egg=furniture_bench
 fvcore==0.1.5.post20221221
 gitdb==4.0.11
 GitPython==3.1.42
@@ -36,8 +36,6 @@ importlib-resources==6.1.1
 iopath==0.1.10
 ipdb==0.13.13
 ipython==8.12.3
-# Editable install with no version control (isaacgym==1.0rc4)
-# -e /data/pulkitag/data/anthony/source_install/test/isaacgym/python
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.3.2
@@ -113,6 +111,7 @@ triton==2.2.0
 typing_extensions==4.9.0
 urllib3==2.2.1
 wandb==0.16.3
+wandb_osh==1.2.2
 wcwidth==0.2.13
 yacs==0.1.8
 zarr==2.16.1
